--- a/assets/style.css
+++ b/assets/style.css
@@ -18,15 +18,64 @@ h1 {
   text-align: center;
 }
 
+.draw_button_wrap {
+  width: 128px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.draw_button {
+  height: 64px;
+  width: 128px;
+  background-color: #4B0082;
+  color: gold;
+  border: none;
+  border-radius: 8px;
+  outline: none;
+  transition: transform 0.2s, background-color 0.1s ease-in;
+}
+
+.draw_button:hover {
+  transform: scale(1.2);
+  cursor: pointer;
+}
+
+.draw_button:active {
+  background-color: #800000;
+}
+
+.color_picker {
+  margin: 30px auto 0 auto;
+  width: fit-content;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 15px;
+  align-items: center;
+  justify-items: center;
+}
+
+.color_block {
+  height: 40px;
+  width: 40px;
+  border: solid 1px black;
+  border-radius: 12px;
+  transition: all 0.2s;
+}
+
+.color_block:hover {
+  transform: scale(1.2);
+  cursor: pointer;
+}
+
 .grid_wrap {
   margin: 30px auto 30px auto;
   width: fit-content;
   border: double 3px green;
-  border-radius: 16px;
+  border-radius: 8px;
 }
 
 #_grid {
-  margin: 8px 7px 7px 8px;
+  margin: 11px 10px 10px 11px;
 }
 
 #_grid:hover {
@@ -56,32 +105,66 @@ h1 {
   border-radius: 1px;
 }
 
-.draw_button_wrap {
-  width: 128px;
-  margin-left: auto;
-  margin-right: auto;
+.black {
+  background-color: black;
 }
 
-.draw_button {
-  height: 64px;
-  width: 128px;
-  background-color: magenta;
-  color: wheat;
-  border: none;
-  border-radius: 8px;
-  outline: none;
-  transition: transform 0.2s, background-color 0.1s ease-in;
+.silver {
+  background-color: silver;
 }
 
-.draw_button:hover {
-  transform: scale(1.2);
-  cursor: pointer;
+.white {
+  background-color: white;
 }
 
-.draw_button:active {
+.fuchsia {
+  background-color: fuchsia;
+}
+
+.purple {
+  background-color: purple;
+}
+
+.red {
   background-color: red;
 }
 
-.black {
-  background-color: black;
+.maroon {
+  background-color: maroon;
+}
+
+.yellow {
+  background-color: yellow;
+}
+
+.gold {
+  background-color: gold;
+}
+
+.olivedrab {
+  background-color: olivedrab;
+}
+
+.lime {
+  background-color: lime;
+}
+
+.springgreen {
+  background-color: springgreen;
+}
+
+.green {
+  background-color: green;
+}
+
+.aqua {
+  background-color: aqua;
+}
+
+.blue {
+  background-color: blue;
+}
+
+.navy {
+  background-color: navy;
 }
