--- a/assets/style.css
+++ b/assets/style.css
@@ -68,14 +68,16 @@ h1 {
 }
 
 .grid_wrap {
+  display: block;
   margin: 30px auto 30px auto;
   width: fit-content;
-  border: double 3px green;
+  border: double 4px green;
   border-radius: 8px;
 }
 
 #_grid {
-  margin: 11px 10px 10px 11px;
+  display: block;
+  margin: 12px 12px 12px 12px;
 }
 
 #_grid:hover {
@@ -91,17 +93,18 @@ h1 {
 
 .cell {
   display: inline-block;
-  margin-right: 1px;
+  /* margin-right: 1px; */
   /* border-radius: 1px; */
   background-color: #ffffff;
-  box-shadow: 0 0 0 1px black;
+  box-shadow: 0 0 1px 0 black;
   /* -webkit-transition: opacity 1s; */
-  /* transition: opacity .05s, transform .05s, border-radius .05s; */
+  transition: opacity .05s, transform .05s, border-radius .05s;
 }
 
 .cell:hover {
   transform: scale(1.1);
-  opacity: 0.8;
+  opacity: 0.6;
+  box-shadow: 0 0 0 1px black;
   border-radius: 1px;
 }
 
