--- a/assets/style.css
+++ b/assets/style.css
@@ -76,6 +76,12 @@ h1 {
 }
 
 #_grid {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   display: block;
   margin: 12px 12px 12px 12px;
 }
@@ -98,7 +104,7 @@ h1 {
   background-color: #ffffff;
   box-shadow: 0 0 1px 0 black;
   /* -webkit-transition: opacity 1s; */
-  transition: opacity .05s, transform .05s, border-radius .05s;
+  transition: opacity 0.05s, transform 0.05s, border-radius 0.05s;
 }
 
 .cell:hover {
@@ -106,6 +112,10 @@ h1 {
   opacity: 0.6;
   box-shadow: 0 0 0 1px black;
   border-radius: 1px;
+}
+
+.painted {
+  box-shadow: none;
 }
 
 .black {
