--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,12 @@
 html {
   font-family: "JetBrains Mono", monospace;
-  font-size: 16px;
+  /* font-size: 16px; */
 }
+
+/* * {
+  margin: 0;
+  padding: 0;
+} */
 
 .vert_indent {
   height: 40px;
@@ -73,6 +78,7 @@ h1 {
   width: fit-content;
   border: double 4px green;
   border-radius: 8px;
+  padding: 12px 12px 12px 12px;
 }
 
 #_grid {
@@ -82,34 +88,26 @@ h1 {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  display: block;
-  margin: 12px 12px 12px 12px;
 }
 
 #_grid:hover {
   cursor: crosshair;
 }
 
-.level {
-  display: block;
-  width: fit-content;
-  margin-left: auto;
-  margin-right: auto;
-}
+/* .level {
+} */
 
 .cell {
   display: inline-block;
-  /* margin-right: 1px; */
-  /* border-radius: 1px; */
   background-color: #ffffff;
   box-shadow: 0 0 1px 0 black;
-  /* -webkit-transition: opacity 1s; */
-  transition: opacity 0.05s, transform 0.05s, border-radius 0.05s;
+  -webkit-transition: -webkit-opacity 0.06s, -webkit-transform 0.06s, -webkit-border-radius 0.06s;
+  transition: opacity 0.06s, transform 0.06s, border-radius 0.06s;
 }
 
 .cell:hover {
-  transform: scale(1.1);
-  opacity: 0.6;
+  transform: scale(1.15);
+  opacity: 0.8;
   box-shadow: 0 0 0 1px black;
   border-radius: 1px;
 }
