--- a/assets/style.css
+++ b/assets/style.css
@@ -1,15 +1,11 @@
 html {
   font-family: "JetBrains Mono", monospace;
-  /* font-size: 16px; */
+  font-size: 16px;
 }
 
-/* * {
+* {
   margin: 0;
   padding: 0;
-} */
-
-.vert_indent {
-  height: 40px;
 }
 
 .wrapper {
@@ -17,6 +13,10 @@ html {
   width: 1024px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.wrapper:hover {
+  cursor: default;
 }
 
 h1 {
@@ -41,7 +41,7 @@ h1 {
 }
 
 .draw_button:hover {
-  transform: scale(1.2);
+  transform: scale(1.15);
   cursor: pointer;
 }
 
@@ -49,36 +49,75 @@ h1 {
   background-color: #800000;
 }
 
-.color_picker {
-  margin: 30px auto 0 auto;
-  width: fit-content;
+.palette {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-gap: 15px;
+  padding-top: 2rem;
+  grid-template-columns: 13% 87%;
+  height: fit-content;
+  align-items: center;
+}
+
+#picker_wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-self: end;
+  height: 8rem;
+  width: 8rem;
+  border-radius: 1.5rem;
+  border: none;
+  transition: transform 0.2s;
+  overflow: hidden;
+}
+
+#picker_wrap:hover {
+  transform: scale(1.15);
+}
+
+#any_color_picker {
+  height: 5rem;
+  width: 5rem;
+  outline: none;
+  transform: scale(2);
+}
+
+#any_color_picker:hover {
+  cursor: pointer;
+}
+
+.color_selection {
+  justify-self: center;
+  display: grid;
+  width: fit-content;
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: 1.4rem;
   align-items: center;
   justify-items: center;
 }
 
 .color_block {
-  height: 40px;
-  width: 40px;
+  height: 3rem;
+  width: 3rem;
   border: solid 1px black;
   border-radius: 12px;
   transition: all 0.2s;
+  box-shadow: 1px 3px 8px 0 black;
 }
 
 .color_block:hover {
-  transform: scale(1.2);
+  transform: scale(1.5);
   cursor: pointer;
 }
 
-.grid_wrap {
+#grid_wrap {
   display: block;
-  margin: 30px auto 30px auto;
   width: fit-content;
-  border: double 4px green;
-  border-radius: 8px;
-  padding: 12px 12px 12px 12px;
+  margin: 3rem auto 2rem auto;
+  padding: 1rem;
+  background-color: #4B0082;
+  border: solid 6px goldenrod;
+  border-radius: 24px;
+  box-shadow: 0 0 32px 0 #708090;
 }
 
 #_grid {
@@ -88,126 +127,24 @@ h1 {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  background-color: whitesmoke;
 }
 
 #_grid:hover {
   cursor: crosshair;
 }
 
-/* .level {
-} */
-
 .cell {
   display: inline-block;
   background-color: #ffffff;
   box-shadow: 0 0 1px 0 black;
-  -webkit-transition: -webkit-opacity 0.06s, -webkit-transform 0.06s, -webkit-border-radius 0.06s;
-  transition: opacity 0.06s, transform 0.06s, border-radius 0.06s;
+  -webkit-transition: -webkit-opacity 0.07s, -webkit-transform 0.07s;
+  transition: opacity 0.07s, transform 0.07s;
 }
 
 .cell:hover {
-  transform: scale(1.15);
+  transform: scale(1.25);
   opacity: 0.8;
-  box-shadow: 0 0 0 1px black;
+  box-shadow: 0 0 0 .8px black;
   border-radius: 1px;
-}
-
-.painted {
-  box-shadow: none;
-}
-
-.black {
-  background-color: black;
-}
-
-.silver {
-  background-color: silver;
-}
-
-.white {
-  background-color: white;
-}
-
-.fuchsia {
-  background-color: fuchsia;
-}
-
-.purple {
-  background-color: purple;
-}
-
-.red {
-  background-color: red;
-}
-
-.maroon {
-  background-color: maroon;
-}
-
-.yellow {
-  background-color: yellow;
-}
-
-.gold {
-  background-color: gold;
-}
-
-.olivedrab {
-  background-color: olivedrab;
-}
-
-.lime {
-  background-color: lime;
-}
-
-.springgreen {
-  background-color: springgreen;
-}
-
-.green {
-  background-color: green;
-}
-
-.aqua {
-  background-color: aqua;
-}
-
-.blue {
-  background-color: blue;
-}
-
-.navy {
-  background-color: navy;
-}
-
-.NavajoWhite {
-  background-color: NavajoWhite;
-}
-
-.Crimson {
-  background-color: Crimson;
-}
-
-.Gray {
-  background-color: Gray;
-}
-
-.DarkSlateGray {
-  background-color: DarkSlateGray;
-}
-
-.AntiqueWhite {
-  background-color: AntiqueWhite;
-}
-
-.Teal {
-  background-color: Teal;
-}
-
-.MediumSlateBlue {
-  background-color: MediumSlateBlue;
-}
-
-.OrangeRed {
-  background-color: OrangeRed;
 }
