--- a/assets/style.css
+++ b/assets/style.css
@@ -23,19 +23,53 @@ h1 {
   text-align: center;
 }
 
+.params {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  align-items: center;
+  column-gap: 1rem;
+  row-gap: 1.5rem;
+  width: 500px;
+  margin: 2rem auto 2rem auto;
+}
+
+.param_input {
+  font-size: 1.1rem;
+  letter-spacing: -1px;
+  justify-self: center;
+}
+
+.params input {
+  padding-left: 0.5rem;
+  width: 13.5rem;
+  height: 2rem;
+  justify-self: start;
+  border: none;
+  box-shadow: 0 0 4px 1px #897501;
+  border-radius: 0.5rem;
+  outline: none;
+  opacity: 0.6;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.params input:hover {
+  opacity: 1;
+}
+
 .draw_button_wrap {
-  width: 128px;
+  width: 20rem;
   margin-left: auto;
   margin-right: auto;
 }
 
 .draw_button {
-  height: 64px;
-  width: 128px;
+  height: 5rem;
+  width: 20rem;
+  font-size: 1.5rem;
   background-color: #4b0082;
   color: gold;
-  border: none;
-  border-radius: 8px;
+  border: dotted 3px goldenrod;
+  border-radius: 1rem;
   outline: none;
   transition: transform 0.2s, background-color 0.1s ease-in;
 }
@@ -47,6 +81,40 @@ h1 {
 
 .draw_button:active {
   background-color: #800000;
+}
+
+.tools {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  justify-items: center;
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.tools > div {
+  height: 5rem;
+  width: 100px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  transition: transform 0.2s;
+}
+
+.tools > div:hover {
+  transform: scale(1.2);
+  cursor: pointer
+}
+
+#brush {
+  background-image: url("../assets/images/brush+general+illustrate+paint+paint+brush+painting+icon-1320183162445596643_0.svg");
+}
+
+#filling {
+  background-image: url("../assets/images/Inkscape_icons_color_fill.svg");
+}
+
+#pipette {
+  background-image: url("../assets/images/pipette-lab-svgrepo-com.svg");
 }
 
 .palette {
@@ -67,6 +135,7 @@ h1 {
   border-radius: 1.5rem;
   border: none;
   transition: transform 0.2s;
+  box-shadow: 0 0 1rem 0 #550255;
   overflow: hidden;
 }
 
@@ -90,7 +159,7 @@ h1 {
   display: grid;
   width: fit-content;
   grid-template-columns: repeat(12, 1fr);
-  grid-gap: 1.4rem;
+  gap: 1.4rem;
   align-items: center;
   justify-items: center;
 }
@@ -112,9 +181,9 @@ h1 {
 #grid_wrap {
   display: block;
   width: fit-content;
-  margin: 3rem auto 2rem auto;
+  margin: 0 auto 2rem auto;
   padding: 1rem;
-  background-color: #4B0082;
+  background-color: #4b0082;
   border: solid 6px goldenrod;
   border-radius: 24px;
   box-shadow: 0 0 32px 0 #708090;
@@ -130,8 +199,16 @@ h1 {
   background-color: whitesmoke;
 }
 
-#_grid:hover {
+.brush {
   cursor: crosshair;
+}
+
+.filling {
+  cursor: cell;
+}
+
+.pipette {
+  cursor: help;
 }
 
 .cell {
@@ -145,6 +222,6 @@ h1 {
 .cell:hover {
   transform: scale(1.25);
   opacity: 0.8;
-  box-shadow: 0 0 0 .8px black;
+  box-shadow: 0 0 0 0.8px black;
   border-radius: 1px;
 }
