--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,5 @@
+/* Supporting */
+
 html {
   font-family: "JetBrains Mono", monospace;
   font-size: 16px;
@@ -10,7 +12,7 @@ html {
 
 .wrapper {
   width: 100%;
-  width: 1024px;
+  width: 1192px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -18,6 +20,8 @@ html {
 .wrapper:hover {
   cursor: default;
 }
+
+/* Grid Params */
 
 h1 {
   text-align: center;
@@ -48,23 +52,55 @@ h1 {
   box-shadow: 0 0 4px 1px #897501;
   border-radius: 0.5rem;
   outline: none;
-  opacity: 0.6;
-  transition: opacity 0.2s ease-in-out;
+  opacity: 0.4;
+  transition: opacity 0.3s linear;
 }
 
 .params input:hover {
   opacity: 1;
 }
 
-.draw_button_wrap {
-  width: 20rem;
+.params input:focus {
+  opacity: 1;
+}
+
+/* Save Load Section */
+
+#save_button {
+  height: 200px;
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: blue;
+}
+
+#save_button:hover {
+  cursor: pointer;
+}
+
+#load_button {
+  height: 200px;
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: green;
+}
+
+#load_button:hover {
+  cursor: pointer;
+}
+
+/* Grid Create Button */
+
+.create_button_wrap {
+  width: 22.5rem;
   margin-left: auto;
   margin-right: auto;
 }
 
-.draw_button {
+.create_button {
   height: 5rem;
-  width: 20rem;
+  width: 22.5rem;
   font-size: 1.5rem;
   background-color: #4b0082;
   color: gold;
@@ -74,18 +110,48 @@ h1 {
   transition: transform 0.2s, background-color 0.1s ease-in;
 }
 
-.draw_button:hover {
+.create_button:hover {
   transform: scale(1.15);
   cursor: pointer;
 }
 
-.draw_button:active {
+.create_button:active {
   background-color: #800000;
 }
 
+/* Palette */
+
+.palette {
+  margin: 0 auto;
+  display: grid;
+  width: fit-content;
+  height: fit-content;
+  padding-top: 2rem;
+  gap: 0.75rem;
+  align-items: center;
+  justify-items: center;
+  grid-template-columns: repeat(16, 1fr);
+}
+
+.color_block {
+  height: 3.5rem;
+  width: 3.5rem;
+  border: solid 1px black;
+  border-radius: 12px;
+  transition: all 0.2s;
+  box-shadow: 1px 3px 8px 0 black;
+}
+
+.color_block:hover {
+  transform: scale(1.3);
+  cursor: pointer;
+}
+
+/* Tools Panel */
+
 .tools {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(5, 1fr);
   align-items: center;
   justify-items: center;
   margin-top: 1.5rem;
@@ -95,6 +161,7 @@ h1 {
 .tools > div {
   height: 5rem;
   width: 100px;
+  justify-self: center;
   background-size: contain;
   background-repeat: no-repeat;
   transition: transform 0.2s;
@@ -132,21 +199,12 @@ h1 {
   cursor: pointer
 }
 
-.palette {
-  display: grid;
-  padding-top: 2rem;
-  grid-template-columns: 13% 87%;
-  height: fit-content;
-  align-items: center;
-}
-
 #picker_wrap {
   display: flex;
   align-items: center;
   justify-content: center;
-  justify-self: end;
-  height: 8rem;
-  width: 8rem;
+  height: 100px;
+  width: 100px;
   border-radius: 1.5rem;
   border: none;
   transition: transform 0.2s;
@@ -159,8 +217,8 @@ h1 {
 }
 
 #any_color_picker {
-  height: 5rem;
-  width: 5rem;
+  height: 4rem;
+  width: 4rem;
   outline: none;
   transform: scale(2);
 }
@@ -169,29 +227,7 @@ h1 {
   cursor: pointer;
 }
 
-.color_selection {
-  justify-self: center;
-  display: grid;
-  width: fit-content;
-  grid-template-columns: repeat(12, 1fr);
-  gap: 1.4rem;
-  align-items: center;
-  justify-items: center;
-}
-
-.color_block {
-  height: 3rem;
-  width: 3rem;
-  border: solid 1px black;
-  border-radius: 12px;
-  transition: all 0.2s;
-  box-shadow: 1px 3px 8px 0 black;
-}
-
-.color_block:hover {
-  transform: scale(1.5);
-  cursor: pointer;
-}
+/* Canvas Grid */
 
 #grid_wrap {
   display: block;
@@ -205,11 +241,9 @@ h1 {
 }
 
 #_grid {
-  -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
   background-color: whitesmoke;
 }
