Code style change

--- a/assets/style.css
+++ b/assets/style.css
@@ -271,7 +271,7 @@ h1 {
   -khtml-user-select: none;
   -moz-user-select: none;
   user-select: none;
-  background-color: whitesmoke;
+  background-color: AntiqueWhite;
 }
 
 .cell {
