--- a/assets/style.css
+++ b/assets/style.css
@@ -69,6 +69,7 @@ h1 {
 .storage_manage {
   margin: 1rem auto;
   width: 900px;
+  height: fit-content;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
@@ -79,31 +80,67 @@ h1 {
 #load_button,
 #clear_history {
   display: block;
-  height: 5rem;
-  width: 200px;
-  font-size: 1.5rem;
-  color: goldenrod;
-  border-radius: 1rem;
+  height: 6rem;
+  width: 14rem;
+  font-size: 1.8rem;
+  letter-spacing: 10px;
+  border-radius: 2rem;
+  border: solid 2px silver;
   outline: none;
-  transition: transform 0.2s, background-color 0.1s ease-in;
+  transition: background-color 0.2s;
 }
 
 #save_button:hover,
 #load_button:hover,
 #clear_history:hover {
-  transform: scale(1.15);
+  background-color: green;
   cursor: pointer;
 }
 
+.save_wrap {
+  position: relative;
+  height: 6rem;
+  width: 14rem;
+}
+
 #save_button {
-  background-color: blue;
+  position: absolute;
+  color: gold;
+  background-color: #0571FF;
+  z-index: 1;
+}
+
+#pic_name {
+  position: absolute;
+  left: 1rem;
+  padding-left: 0.5rem;
+  width: 11.5rem;
+  height: 3rem;
+  border: none;
+  box-shadow: 0 0 4px 1px #897501;
+  border-radius: 0.5rem;
+  outline: none;
+  z-index: 0;
+  opacity: 0;
+}
+
+#accept_save {
+  position: absolute;
+  top: 3rem;
+  height: 3rem;
+  left: 4rem;
+  width: 6rem;
+  z-index: 0;
+  opacity: 0;
 }
 
 #load_button {
+  color: black;
   background-color: green;
 }
 
 #clear_history {
+  color: black;
   background-color: red;
 }
 
